--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MySecond">
-        <activity android:name=".main.MainActivity">
+        <activity android:name=".data.project.ProjectActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
