--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.my_second">
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
-        android:name=".data.local.App"
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MySecond">
-        <activity android:name=".data.task.TaskListActivity"></activity>
+        <activity android:name=".data.project.CreateProjectActivity"></activity>
+        <activity android:name=".data.task.TaskListActivity" />
         <activity android:name=".data.project.ProjectActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
