--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MySecond">
-        <activity android:name=".data.project.CreateProjectActivity"></activity>
+        <activity android:name=".data.create.CreateProjectActivity"></activity>
         <activity android:name=".data.task.TaskListActivity" />
         <activity android:name=".data.project.ProjectActivity">
             <intent-filter>
