--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,4 +74,8 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
 
     implementation 'com.android.support:multidex:1.0.3'
+
+    def koin_version= "3.0.1-beta-2"
+    implementation "io.insert-koin:koin-android:$koin_version"
+    implementation "io.insert-koin:koin-android-ext:$koin_version"
 }
